--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -6,6 +6,7 @@ argo:
 sealedSecrets: 
   namespace: sealed-secrets
   name: sealed-secrets
+  enabled: true
   source:
     repoURL: https://charts.bitnami.com/bitnami
     targetRevision:  1.0.10
@@ -14,6 +15,7 @@ sealedSecrets:
 postgresOperator:
   namespace: postgres-operator
   name: postgres-operator
+  enabled: true
   source:
     repoURL: null
     path: argocd/ops/tools/postgres-operator
@@ -22,6 +24,7 @@ postgresOperator:
 prometheusOperator:
   namespace: monitoring
   name: prom-operator
+  enabled: true
   source:
     repoURL: https://prometheus-community.github.io/helm-charts
     targetRevision: 38.0.0
