test for branching

--- a/charts/she-runtime/templates/application.yaml
+++ b/charts/she-runtime/templates/application.yaml
@@ -1,11 +1,13 @@
 {{- range $chartName, $chart := omit .Values "argo" }}
 {{- with $chart -}}
-{{- if (.enabled) }}
+{{- if .enabled }}
 
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: '{{ include "argo.targetCluster.name" $ }}-{{ include "application.name" . }}'
+  annotations:
+    foo: baa
 spec:
   project: {{ include "argo.project" $ }}
   source:
