--- a/charts/she-runtime/templates/application.yaml
+++ b/charts/she-runtime/templates/application.yaml
@@ -1,4 +1,4 @@
-{{- range $chartName, $chart := omit .Values "argo" }}
+{{- range $chartName, $chart := omit .Values "argo" "prometheusOperator"}}
 {{- with $chart -}}
 {{- if .enabled }}
 
