--- a/charts/she-runtime/templates/application.yaml
+++ b/charts/she-runtime/templates/application.yaml
@@ -16,6 +16,7 @@ spec:
       prune: true
     syncOptions:
      - CreateNamespace=true
+     - ServerSideApply=true
   destination:
     name: '{{ include "argo.targetCluster" $ }}'
     namespace: {{ include "application.namespace" . }}
