--- a/charts/she-runtime/templates/application.yaml
+++ b/charts/she-runtime/templates/application.yaml
@@ -1,4 +1,4 @@
-{{- range $chartName, $chart := omit .Values "argo" "prometheusOperator" "eckOperator"}}
+{{- range $chartName, $chart := omit .Values "argo" "prometheusOperator" "eckOperator" "velero"}}
 {{- with $chart -}}
 {{- if .enabled }}
 
