--- a/charts/she-runtime/templates/velero.yaml
+++ b/charts/she-runtime/templates/velero.yaml
@@ -17,8 +17,8 @@ spec:
         initContainers:
         {{- toYaml . | nindent 8 }}
         {{- end }}
-        snapshotsEnabled: true
-        backupsEnabled: true
+        snapshotsEnabled: false
+        backupsEnabled: false
         deployRestic: true
         metrics:
           enabled: true
