Added additional helm values to velero chart

--- a/charts/she-runtime/templates/velero.yaml
+++ b/charts/she-runtime/templates/velero.yaml
@@ -31,6 +31,9 @@ spec:
         resources:
         {{- toYaml . | nindent 10 }}
         {{- end }}
+        {{- with .source.helm.values }}
+        {{- . | nindent 8 }}
+        {{- end }}
   syncPolicy:
     automated:
       selfHeal: true
