--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -92,6 +92,15 @@ publicIngressController:
     targetRevision: 4.4.2
     chart: ingress-nginx
 
+argoApp:
+  namespace: argocd
+  name: argo
+  enabled: false
+    source:
+      repoURL: https://argoproj.github.io/argo-helm
+      targetRevision: 5.19.12
+      chart: argo-cd
+
 velero:
   namespace: velero
   name: velero
@@ -116,3 +125,4 @@ velero:
     chart: velero
     helm:
       values: |
+
