--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -51,11 +51,13 @@ prometheusOperator:
     baseUrl: my.domain
   alertmanager:
     enabled: true
+    ingress: {}
     # ingress:
       # enabled: true
       # baseUrl: my.domain
   grafana:
     enabled: true
+    ingress: {}
     # ingress:
       # enabled: true
       # baseUrl: my.domain
@@ -66,6 +68,7 @@ prometheusOperator:
     serviceMonitorSelectors:
       matchLabels:
         prometheus: she
+    ingress: {}
     # ingress:
       # enabled: true
       # baseUrl: my.domain
