--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -96,6 +96,10 @@ publicIngressController:
     repoURL: https://kubernetes.github.io/ingress-nginx
     targetRevision: 4.4.2
     chart: ingress-nginx
+    helm:
+      parameters:
+        - name: controller.ingressClassResource.controllerValue
+          value: k8s.io/ingress-nginx-public
 
 argoApp:
   namespace: argocd
