--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -87,6 +87,10 @@ internalIngressController:
     repoURL: https://kubernetes.github.io/ingress-nginx
     targetRevision: 4.4.2
     chart: ingress-nginx
+    helm:
+      parameters:
+        - name: watchIngressWithoutClass
+          value: 'true'
 
 publicIngressController:
   namespace: public-ingress
