Add several Ingress controller Improvements (#7)
* Fix serviceMonitorSelectors

* Change ingressClassResource.controllerValue

* internal-ingress watches all resources

* set some defaults for internal ingress

* set some defaults for internal ingress

* update changelog

---------

Co-authored-by: Florian Degner <florian.degner@she.net>
Co-authored-by: kstiehl <kevin.stiehl@she.net>

--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -87,7 +87,16 @@ internalIngressController:
     repoURL: https://kubernetes.github.io/ingress-nginx
     targetRevision: 4.4.2
     chart: ingress-nginx
-
+    helm:
+      parameters:
+        - name: controller.ingressClass
+          value: nginx-internal
+        - name: controller.watchIngressWithoutClass
+          value: 'true'
+        - name: controller.ingressClassResource.name
+          value: nginx-internal
+        - name: controller.ingressClassResource.default
+          value: 'true'
 publicIngressController:
   namespace: public-ingress
   name: public-ingress
@@ -96,6 +105,10 @@ publicIngressController:
     repoURL: https://kubernetes.github.io/ingress-nginx
     targetRevision: 4.4.2
     chart: ingress-nginx
+    helm:
+      parameters:
+        - name: controller.ingressClassResource.controllerValue
+          value: k8s.io/ingress-nginx-public
 
 argoApp:
   namespace: argocd
