--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -107,6 +107,8 @@ publicIngressController:
     chart: ingress-nginx
     helm:
       parameters:
+        - name: controller.ingressClass
+          value: nginx-internal
         - name: controller.ingressClassResource.controllerValue
           value: k8s.io/ingress-nginx-public
 
