render ingressclass resource correct

--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -109,6 +109,8 @@ publicIngressController:
       parameters:
         - name: controller.ingressClass
           value: public
+        - name: controller.ingressClassResource.name
+          value: public
         - name: controller.ingressClassResource.controllerValue
           value: k8s.io/ingress-nginx-public
 
