--- a/charts/s3-monitoring/templates/deployment.yaml
+++ b/charts/s3-monitoring/templates/deployment.yaml
@@ -5,17 +5,19 @@ metadata:
   name: {{ .Release.Name }}-deployment
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- .Values.commonLabels | toYaml | nindent 4 }}
+    app.kubernetes.io/component: deployment
+    {{- include "common.labels" . | nindent 4 }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      {{- .Values.commonLabels | toYaml | nindent 6 }}
+      {{- include "common.labels" . | nindent 6 }}
   strategy: {}
   template:
     metadata:
     labels:
-      {{- .Values.commonLabels | toYaml | nindent 6 }}
+      app.kubernetes.io/component: pod
+      {{- include "common.labels" . | nindent 6 }}
     spec:
       containers:
       - name: nginx
