--- a/charts/s3-monitoring/templates/service.yaml
+++ b/charts/s3-monitoring/templates/service.yaml
@@ -5,7 +5,8 @@ metadata:
   name: {{ .Release.Name }}-service
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- .Values.commonLabels | toYaml | nindent 4 }}
+    app.kubernetes.io/component: service
+    {{- include "common.labels" . | nindent 4 }}
 spec:
   ports:
     - name: {{ .Release.Name }}-service-port
@@ -13,5 +14,5 @@ spec:
       targetPort: 80
       protocol: TCP
   selector:
-    {{- .Values.commonLabels | toYaml | nindent 4 }}
+    {{- include "common.labels" . | nindent 4 }}
 {{- end }}
