Fix indentation and use configMapRef instead of just configMap

--- a/charts/s3-monitoring/templates/deployment.yaml
+++ b/charts/s3-monitoring/templates/deployment.yaml
@@ -15,9 +15,9 @@ spec:
   strategy: {}
   template:
     metadata:
-    labels:
-      app.kubernetes.io/component: pod
-      {{- include "common.labels" . | nindent 6 }}
+      labels:
+        app.kubernetes.io/component: pod
+        {{- include "common.labels" . | nindent 6 }}
     spec:
       containers:
       - name: nginx
@@ -32,7 +32,7 @@ spec:
         image: sheitag/s3df
         resources: {}
         envFrom:
-        - configMap:
+        - configMapRef:
             name: {{ .Release.Name }}-config-map
         - secretRef:
             name: {{ .Release.Name }}-secret
