Documented new config parameters

--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -52,6 +52,13 @@ prometheusOperator:
   alertmanager:
     enabled: true
     ingress: {}
+    ## Alertmanager configuration directives  
+    ## ref: https://prometheus.io/docs/alerting/configuration/#configuration-file  
+    ##      https://prometheus.io/webtools/alerting/routing-tree-editor/
+    config: {}
+    ## Secrets is a list of Secrets in the same namespace as the Alertmanager object, which shall be mounted into the
+    ## Alertmanager Pods. The Secrets are mounted into /etc/alertmanager/secrets/.
+    secrets: []
     # ingress:
       # enabled: true
       # baseUrl: my.domain
