--- a/charts/she-runtime/templates/prometheus.yaml
+++ b/charts/she-runtime/templates/prometheus.yaml
@@ -81,6 +81,10 @@ spec:
               enforce_domain: true
             auth:
               sigv4_verbose_logging: true
+            {{- if .grafana.auth.generic_oauth }}
+            auth.generic_oauth:
+              {{ toYaml .grafana.auth.generic_oauth | nindent 14 }}
+            {{- end }}
           {{- end }}
         {{- end }}
         {{- if .prometheus.enabled }}
