--- a/charts/she-runtime/templates/prometheus.yaml
+++ b/charts/she-runtime/templates/prometheus.yaml
@@ -81,9 +81,11 @@ spec:
               enforce_domain: true
             auth:
               sigv4_verbose_logging: true
+            {{- if .grafana.auth }}
             {{- if .grafana.auth.generic_oauth }}
             auth.generic_oauth:
               {{ toYaml .grafana.auth.generic_oauth | nindent 14 }}
+            {{- end }}
             {{- end }}
           {{- end }}
         {{- end }}
