Prometheus: Add defaultRules configuration options - fix

--- a/charts/she-runtime/templates/prometheus.yaml
+++ b/charts/she-runtime/templates/prometheus.yaml
@@ -92,6 +92,7 @@ spec:
         {{- if .prometheus.enabled }}
         prometheus:
           {{- if .prometheus.defaultRules }}
+          defaultRules:
             {{ toYaml .prometheus.defaultRules | nindent 12 }}
           {{- end }}
           prometheusSpec:
