--- a/charts/she-runtime/templates/prometheus.yaml
+++ b/charts/she-runtime/templates/prometheus.yaml
@@ -37,7 +37,7 @@ spec:
               nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
               nginx.ingress.kubernetes.io/backend-protocol: HTTP
               {{- if .alertmanager.ingress.annotations }}
-              {{ toYaml .alertmanager.ingress.annotations | nindent 14 }}
+              {{- toYaml .alertmanager.ingress.annotations | nindent 14 }}
               {{- end }}
           extraArgs:
               - --insecure
@@ -58,7 +58,7 @@ spec:
               nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
               nginx.ingress.kubernetes.io/backend-protocol: HTTP
               {{- if .grafana.ingress.annotations }}
-              {{ toYaml .grafana.ingress.annotations | nindent 14 }}
+              {{- toYaml .grafana.ingress.annotations | nindent 14 }}
               {{- end }}
           extraArgs:
               - --insecure
@@ -84,7 +84,7 @@ spec:
             {{- if .grafana.auth }}
             {{- if .grafana.auth.generic_oauth }}
             auth.generic_oauth:
-              {{ toYaml .grafana.auth.generic_oauth | nindent 14 }}
+              {{- toYaml .grafana.auth.generic_oauth | nindent 14 }}
             {{- end }}
             {{- end }}
           {{- end }}
@@ -93,7 +93,7 @@ spec:
         prometheus:
           {{- if .prometheus.defaultRules }}
           defaultRules:
-            {{ toYaml .prometheus.defaultRules | nindent 12 }}
+            {{- toYaml .prometheus.defaultRules | nindent 12 }}
           {{- end }}
           prometheusSpec:
             additionalScrapeConfigs:
@@ -170,7 +170,7 @@ spec:
               nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
               nginx.ingress.kubernetes.io/backend-protocol: HTTP
               {{- if .prometheus.ingress.annotations }}
-              {{ toYaml .prometheus.ingress.annotations | nindent 14 }}
+              {{- toYaml .prometheus.ingress.annotations | nindent 14 }}
               {{- end }}
           extraArgs:
               - --insecure
