Add option for generic ingress

--- a/charts/she-runtime/templates/prometheus.yaml
+++ b/charts/she-runtime/templates/prometheus.yaml
@@ -36,6 +36,9 @@ spec:
             annotations:
               nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
               nginx.ingress.kubernetes.io/backend-protocol: HTTP
+              {{- if .ingress.annotations }}
+              {{- toYaml .ingress.annotations | nindent 14 }}
+              {{- end }}
               {{- if .alertmanager.ingress.annotations }}
               {{- toYaml .alertmanager.ingress.annotations | nindent 14 }}
               {{- end }}
@@ -57,6 +60,9 @@ spec:
             annotations:
               nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
               nginx.ingress.kubernetes.io/backend-protocol: HTTP
+              {{- if .ingress.annotations }}
+              {{- toYaml .ingress.annotations | nindent 14 }}
+              {{- end }}
               {{- if .grafana.ingress.annotations }}
               {{- toYaml .grafana.ingress.annotations | nindent 14 }}
               {{- end }}
@@ -169,6 +175,9 @@ spec:
             annotations:
               nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
               nginx.ingress.kubernetes.io/backend-protocol: HTTP
+              {{- if .ingress.annotations }}
+              {{- toYaml .ingress.annotations | nindent 14 }}
+              {{- end }}
               {{- if .prometheus.ingress.annotations }}
               {{- toYaml .prometheus.ingress.annotations | nindent 14 }}
               {{- end }}
