Make additionalAlertManagerConfigs configurable, reset default servicemonitorselector

--- a/charts/she-runtime/templates/prometheus.yaml
+++ b/charts/she-runtime/templates/prometheus.yaml
@@ -161,8 +161,14 @@ spec:
                     target_label: schemaname
                     replacement: '$1'
               {{- end }}
+            {{- if .prometheus.serviceMonitorSelectors }}
             serviceMonitorSelector:
               {{- toYaml .prometheus.serviceMonitorSelectors | nindent 14 }}
+            {{- end }}              
+            {{- if .prometheus.additionalAlertManagerConfigs }}
+            additionalAlertManagerConfigs:
+              {{- toYaml .prometheus.additionalAlertManagerConfigs | nindent 14 }}
+            {{- end }}              
           {{- if .prometheus.ingress.enabled | default .ingress.enabled }}
           ingress:
             ingressClassName: {{ .prometheus.ingress.className }}
