--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -81,9 +81,9 @@ prometheusOperator:
     enabled: true
     crunchyPostgresExporter:
       enabled: true
-    serviceMonitorSelectors:
-      matchLabels:
-        prometheus: she
+#    serviceMonitorSelectors:
+#      matchLabels:
+#        prometheus: she
     ingress: {}
     # ingress:
       # enabled: true
